crates/check_cli/tests/snapshots/main_commands_lint/include_files_in_symlinked_subdir.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: redactor(content)
---
# Termination Message

```block
lint ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
symlinked/file.js:1:1 lint/style/useConst  FIXABLE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  ! This let declares a variable that is only assigned once.
  
  > 1 │ let a = 4;
      │ ^^^
    2 │ debugger;
    3 │ console.log(a);
  
  i 'a' is never reassigned.
  
  > 1 │ let a = 4;
      │     ^
    2 │ debugger;
    3 │ console.log(a);
  
  i Safe fix: Use const instead.
  
    1   │ - let·a·=·4;
      1 │ + const·a·=·4;
    2 2 │   debugger;
    3 3 │   console.log(a);
  

```

```block
symlinked/file.js:2:1 lint/suspicious/noDebugger  FIXABLE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × This is an unexpected use of the debugger statement.
  
    1 │ let a = 4;
  > 2 │ debugger;
      │ ^^^^^^^^^
    3 │ console.log(a);
    4 │ 
  
  i Unsafe fix: Remove debugger statement
  
    1 1 │   let a = 4;
    2   │ - debugger;
    3 2 │   console.log(a);
    4 3 │   
  

```

```block
Checked 1 file in <TIME>. No fixes applied.
Found 1 error.
Found 1 warning.
```
