crates/check_cli/tests/snapshots/main_commands_lint/lint_help.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: redactor(content)
---
# Emitted Messages

```block
Run various checks on a set of files.

Usage: lint [--write] [--unsafe] [--suppress] [--reason=STRING] [--only=<GROUP|RULE>]... [--skip=
<GROUP|RULE>]... [--staged] [--changed] [--since=REF] [PATH]...

Set of properties to integrate Check with a VCS software.
        --vcs-enabled=<true|false>  Whether Check should integrate itself with the VCS client
        --vcs-client-kind=<git>  The kind of client.
        --vcs-use-ignore-file=<true|false>  Whether Check should use the VCS ignore file. When
                              [true], Check will ignore the files specified in the ignore file.
        --vcs-root=PATH       The folder where Check should check for VCS files. By default, Check
                              will use the same folder where `check.json` was found.
                              If Check can't find the configuration, it will attempt to use the
                              current working directory. If no current working directory can't be
                              found, Check won't use the VCS integration, and a diagnostic will be
                              emitted
        --vcs-default-branch=BRANCH  The main branch of the project

The configuration of the filesystem
        --files-max-size=NUMBER  The maximum allowed size for source code files in bytes. Files
                              above this limit will be ignored for performance reasons. Defaults to
                              1 MiB
        --files-ignore-unknown=<true|false>  Tells Check to not emit diagnostics when handling files
                              that doesn't know

Linter options specific to the JavaScript linter
        --javascript-linter-enabled=<true|false>  Control the linter for JavaScript (and its super
                              languages) files.

Linter options specific to the JSON linter
        --json-linter-enabled=<true|false>  Control the linter for JSON (and its super languages)
                              files.

Global options applied to all commands
        --colors=<off|force>  Set the formatting mode for markup: "off" prints everything as plain
                              text, "force" forces the formatting of markup using ANSI even if the
                              console output is determined to be incompatible
        --use-server          Connect to a running instance of the Check daemon server.
        --verbose             Print additional diagnostics, and some diagnostics show more
                              information. Also, print out what files were processed and which ones
                              were modified.
        --config-path=PATH    Set the file path to the configuration file, or the directory path to
                              find `check.json` or `check.jsonc`. If used, it disables the default
                              configuration file resolution.
                              [env:CHECK_CONFIG_PATH: N/A]
        --max-diagnostics=<none|<NUMBER>>  Cap the amount of diagnostics displayed. When `none` is
                              provided, the limit is lifted.
                              [default: 20]
        --skip-parse-errors   Skip over files containing syntax errors instead of emitting an error
                              diagnostic.
        --no-errors-on-unmatched  Silence errors that would be emitted in case no files were
                              processed during the execution of the command.
        --error-on-warnings   Tell Check to exit with an error code if some diagnostics emit
                              warnings.
        --reporter=<json|json-pretty|github|junit|summary|gitlab>  Allows to change how diagnostics
                              and summary are reported.
        --log-file=ARG        Optional path to redirect log messages to.
                              If omitted, logs are printed to stdout.
        --log-level=<none|debug|info|warn|error>  The level of logging. In order, from the most
                              verbose to the least verbose: debug, info, warn, error.
                              The value `none` won't show any logging.
                              [default: none]
        --log-kind=<pretty|compact|json>  How the log should look like.
                              [default: pretty]
        --diagnostic-level=<info|warn|error>  The level of diagnostics to show. In order, from the
                              lowest to the most important: info, warn, error. Passing
                              `--diagnostic-level=error` will cause Check to print only diagnostics
                              that contain only errors.
                              [default: info]

Available positional items:
    PATH                      Single file, single path or list of paths

Available options:
        --write               Writes safe fixes
        --unsafe              Apply unsafe fixes. Should be used with `--write` or `--fix`
        --fix                 Alias for `--write`, writes safe fixes
        --suppress            Fixes lint rule violations with comment suppressions instead of using
                              a rule code action (fix)
        --reason=STRING       Explanation for suppressing diagnostics with `--suppress`
        --only=<GROUP|RULE>   Run only the given rule or group of rules. If the severity level of a
                              rule is `off`, then the severity level of the rule is set to `error`
                              if it is a recommended rule or `warn` otherwise.
                              Example: `check lint --only=correctness/noUnusedVariables
                              --only=suspicious`
        --skip=<GROUP|RULE>   Skip the given rule or group of rules by setting the severity level of
                              the rules to `off`. This option takes precedence over `--only`.
                              Example: `check lint --skip=correctness/noUnusedVariables
                              --skip=suspicious`
        --stdin-file-path=PATH  Use this option when you want to format code piped from `stdin`, and
                              print the output to `stdout`.
                              The file doesn't need to exist on disk, what matters is the extension
                              of the file. Based on the extension, Check knows how to lint the code.
                              Example: ```shell echo 'let a;' | check lint --stdin-file-path=file.js
                              --write ```
        --staged              When set to true, only the files that have been staged (the ones
                              prepared to be committed) will be linted.
        --changed             When set to true, only the files that have been changed compared to
                              your `defaultBranch` configuration will be linted.
        --since=REF           Use this to specify the base branch to compare against when you're
                              using the --changed flag and the `defaultBranch` is not set in your
                              check.json
    -h, --help                Prints help information

```
