crates/check_cli/tests/snapshots/main_commands_lint/lint_only_multiple_rules.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: redactor(content)
---
## `check.js`

```js
debugger; delete obj.prop; a === -0;
```

# Termination Message

```block
lint ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
check.js:1:11 lint/performance/noDelete  FIXABLE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  ! Avoid the delete operator which can impact performance.
  
  > 1 │ debugger; delete obj.prop; a === -0;
      │           ^^^^^^^^^^^^^^^
  
  i Unsafe fix: Use an undefined assignment instead.
  
  - debugger;·delete·obj.prop;·a·===·-0;
  + debugger;·obj.prop·=·undefined;·a·===·-0;
  

```

```block
check.js:1:1 lint/suspicious/noDebugger  FIXABLE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × This is an unexpected use of the debugger statement.
  
  > 1 │ debugger; delete obj.prop; a === -0;
      │ ^^^^^^^^^
  
  i Unsafe fix: Remove debugger statement
  
    1 │ debugger;·delete·obj.prop;·a·===·-0;
      │ ----------                          

```

```block
Checked 1 file in <TIME>. No fixes applied.
Found 1 error.
Found 1 warning.
```
