crates/check_cli/tests/snapshots/main_commands_lint/lint_only_rule.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: content
---
## `check.js`

```js
debugger; delete obj.prop;
```

# Termination Message

```block
lint ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
check.js:1:1 lint/suspicious/noDebugger  FIXABLE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × This is an unexpected use of the debugger statement.
  
  > 1 │ debugger; delete obj.prop;
      │ ^^^^^^^^^
  
  i Unsafe fix: Remove debugger statement
  
    1 │ debugger;·delete·obj.prop;
      │ ----------                

```

```block
Checked 1 file in <TIME>. No fixes applied.
Found 1 error.
```
