crates/check_cli/tests/snapshots/main_commands_lint/lint_only_rule_doesnt_exist.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: content
---
## `check.js`

```js
for(;true;);

```

# Termination Message

```block
flags/invalid ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Failed to parse CLI arguments.
    
    Caused by:
      couldn't parse `suspicious/inexistant`: This rule doesn't exist.
  


```
