crates/check_cli/tests/snapshots/main_commands_lint/lint_only_rule_skip_group.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: content
---
## `check.js`

```js
debugger; delete obj.prop; a === -0;
```

# Emitted Messages

```block
Checked 1 file in <TIME>. No fixes applied.
```
